# CIAM_Electric_Field_Mapping

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux.yml  raspi-bullseye.yml
Basti/: Potato.txt
Patrick/: CMakeLists.txt
cmake/: arm-gcc-rasp-1.cmake  arm-gcc-rasp.cmake
example/: CMakeLists.txt  main.cpp
include/ciam/: Factory.hpp  data_logger.hpp  iDataLogger.hpp
include/ciam/config/: DataLoggerConfig.hpp
include/ciam/config/datasource/: DataSourceConfig.hpp  ExternalRHD2000Config.hpp
src/: CMakeLists.txt  DataLogger.cpp  DataLogger.hpp  Factory.cpp  data_logger.cpp  rhd2000registers.cpp  rhd2000registers.hpp
src/datasource/: iDataSource.hpp
src/datasource/externaladc/: ExternalRHD2000.cpp  ExternalRHD2000.hpp
src/hal/: RaspberryPiBoard.cpp  RaspberryPiBoard.hpp  SimulationBoard.cpp  SimulationBoard.hpp  bcm2835_chip.cpp  bcm2835_chip.hpp  iSPI.hpp
